:recycle: Lots of Changes

--- a/InfoBuraco/TelaNotificacao.resx
+++ b/InfoBuraco/TelaNotificacao.resx
@@ -214,6 +214,132 @@
         AABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAbsAAAG7ATrs4+IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAHRUlEQVR4XuWaaWxUVRTHZzrThekybWe6r5SW7lNaWugKbUFQkCASRKAUZW1ZlFIWgQqC7FIKYlkE
+        QaCgAZcPfvCDcYmfNfrBJdFEjSYmGPxiolEjHs//9r1xOnMGCqXtlHeTX9o58+be8z/vvnvPvfeZiMjQ
+        iEYjIRqNhGg0EqLRSIhGIyEajYRoNBKi0UiIRiMhGo2EaDQSotFIiMahgksYkL4bKkTjQOFiZVxMM9PF
+        vM18wHzKfMv8wvzF4GLwN3OD+Y75nPmYucbsZh5nUFeo1NZAEY13CpckZhVzhvmE+ZPRxflgNpvJZgsn
+        R1w8OeMTKDwikqxWq3itB/8w3zCXmMcYu+TLnSIa+wOXeKaV+Yi5ybidDQ4JoaycXGqYPoOeXP00te/Y
+        Q88e7KJ9x09T1ys9dPLKm3Tqtbd8eOnSVeo8c4H2HDtJG3fuoUXLW1QdeUUuskfHuOvXQK95n2ljsiQf
+        +4No9AcXC7OYeY/BHVHOwLnaxgeoaeVq6jhwhE70XBMFDhQEZ/lT7VQ2sYps4eF6IMC/zDtMveT3rRCN
+        ElxmMl8wqtFR3IVrGqZSW8cuv3d0MNl1pJue4N5V0ziVouzReiAAHkGMG1ZJhzei0RMuFcyHjGpgbH4h
+        tbRvUd1VcmyoOHr+Cm3n3ga27n2BZs9fRAnJKXoQwNdMpaTJE9Gow+Ugg+5FyWnptGbzdtGZ4WJXV7c7
+        CDoLedzIHJOtBwFj0yHG71QrGnV4hP4y1uG82bxq7bB089tx9NxlnwDozJw7n0LDwvRAoDdUSBp9DKD7
+        6tUIbuDdQBTtzc7O42IAwLqtO9RshCDw1Ps7/6321tr3g8k0mS/8edGylq+kxgKRA91nRfGeYIbSgvAb
+        /y3ro9lDvJ0v+BEXrtm0TWwsEOk61yOK9qa6fooehF/5b4EUgIu4YELtJLGhQOXE5TdYYJePYImJdZNV
+        EJjPGLM7AFzm4otYZ5zK1KSGAhlpNhDZ30mJKal6EJo07aZQ5gZ3DZWySg3cDXtfPEWt7c/QYs4O5yxY
+        TNNmPcLdsJFcZRVqYIpPTOJsLoITKhvFOJyUnJpGY8bmUWFJKZVX1dCUhx6mphWttOm5fXTk7EWxDZ39
+        /RgHdJCtsl4ymc0/8N8QBKAahpLyCWLl/QWCl7SspapJDaonqUZuA4IeFBQkfucN0u38Yhdnnrt92j50
+        6rwo1h85nMxp9WK1atqAD48ubPap+FZgDl7Sus6v4FFh4RQbk0DxzlRKTsyijNRcGpNZTLnZZVSUV0nj
+        iupofEmDosxVrz4X51dRQe4Edc3ojAJKSsikaHschYXaVLBQb2l5FR0+fUH5gAXT0jXrOQDnRKH+QNao
+        +XmMUetu2vjcXh+REmjswdlz1VpAq0QREhxKjtgkGp1eQK7CGre4e0WZa7IKHIKFz40Ncyg6xqHajoyy
+        U/20GbSBH2FJsDcr1m/S/cZq0vSTxWKh4xdeFwXrPM8DTd2UaRQcHKx+HBRkUXcnPWUsFeZN9HF4KCjI
+        rSB7lFMXo5bh5dW1KmWXhOtg7QDN/BtszJiuW63BflPd7Qc6aXxltbsLWixWSozPoJLCWtGp4QA3wMm9
+        L8jcO57AV+whLFu3wUc82MazgaV3A+Y6AoBuoAYxb/ELlq5UdxrfW1k4nknPZzfQwKOXlJBBuKHw2cwD
+        bN3U6bR13+E+AVi7pUN9r2lXA4GasnTh3T3XaBL/EHbc8eTE0QEt3JvS4kmUmpztvnkpaRn8WHS4AzCv
+        eakeADUIYipQ8y/EH375VZ4mCtQFISFhalSWGhkJ4NGwjYpUWiIio2hl22YVAOQbsGnaVTLwPScG/My0
+        kUOb0my2yEEZzYcazB5OR7LShKRr1rwFSIL+T4S0dLAJF+hE252qG0kVjlTiHH12i0BvKqwFwMxggUDh
+        4Xb+Qe9ce78RbovSxfddDGlBKODpA0tFNehJFYxkMINBm6bRdzmsBaGML8CmAc/16WJFI5EE1qKJ978h
+        4jb0Lo6wfcRZloNcBdVipSMB+A4N0MLi/4A2H73eBmXs3QrHRqLKAzLT8sQGAhn4DN+hQdPS/01RwAUn
+        t9hSVsdeURExlJM1TmwskICP8BU+M9jSv/ttccClklG9ASCxwIpPX5UFAvAFPulJj8bAD0Z0uOC4G8dN
+        OHZSDWD5i7w7L2c8OzEcwahXbcMH+KL7pfl4747GvOFSz+AgUp0YgWBrCDliEikro3BQV4moG22gLbSp
+        t6/5MriHo95wyWJwNI0VFY6q3Q4F8x2J5OcQu0HpqbmUm11KRflVSgBSU0kcwHe4BtfiN/gt6kBdqNOz
+        DWboj8f9wcXO4KUFvLyAlxjcR+cSZl63Y8kayostgP9hk671ILBekLgVXLDTjNda8CziNRdsu+G1F7z+
+        gtdg8DqMZ6/B/yP3FZm7hcv9+ZLUSEI0GgnRaCREo5EQjUZCNBoJ0WgkRKOREI1GQjQaCdFoJESjkRCN
+        xoFM/wF62mUVnzqmmgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4gYTFBUL4fwpyAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAP4SURBVHhe
+        7Zo/zw1BFIffBIWISoUInUalQKEQjUgo1BpEdDq1RKdS+gK0RKMUoZH4BHQaFBIRIkL8+z3yTjKZnLnv
+        7s6cmbvX/SVPcu/d2Tlnz+7MnDl7Nypppzgnbot74ol4JT5vwmd+4xhtaMs5s9YecUU8El/Fn5FwDufS
+        B33NRrvETfFFWBc2BfqiT/peWm0T18R7YV1EDegbG9haKu0TL4XltAfYwuZS6Jh4JyxHPcEmtrvqovgm
+        LAdTPor74pI4LQ6L3Zvwmd84RhvaWn2kYBsfugjDllMpD8UpsV0MFW05h3OtPlOaB4FHb6s7/0KcFKWi
+        D/qybATwpdlwYPJZNOZ/iRuituiTvi2bgE/uEyPLz6LZ/pM4K3I6Km6Jp+K1YH0fI/rGhmUb8M11iWQN
+        tgwDjh0Rli4I0l3rvLHCxqIg4KOLyMJySQ6PpnXnD4rnwjonMEVnxE9h9YePLhkjqahlEKwxzyz+QVjt
+        Y6bqurD6A3ytKjYjudyeGToVF/9DpG25a48F88B5sVeU6JlIbQC+Vt1AsSOzDEG61PHYW3eeOeC4qKkT
+        IrUTuCyqiW2pZYREJVU65n+LO8Jrf/9AxPYC+FxFOJ7bz/Oox2K2T9tw8Z7Ch9Qm4HOVoFOdsQyQr6fp
+        bbrU8d27soMPub0DvheLEpXVOZuWWCQ58XEmvNpjPid8iW0H8L1Y1Omsztm5xWJmj48z27cSvsS2A/he
+        LIqVVudsX2OR3sbHCUgr4UtsO4DvxcqlsOzhY5Hbx8dZ51sJX2LbAXwvFmVrq3MKGbHSRKk0yRkjfIlt
+        B/C9WEMD0FOuARg6BHrKdQgMnQR7ynUSHLoM9pTrMjg0Eeop10RoTCrcQ+6p8JjNUA+5b4bQmO1wa7lv
+        h9GYgkhLNSuIjC2JtVKzkhgaWxT1VtOiKJpSFvdSl7I4mvpipKa6vRhBpa/GStX91Rj6r1+OBs3h9fgO
+        QYp86N83By37HyTuCo69Ea5B2OpJCJCvc0fYubF9ZQ9PIQP4zG8co00ut0/BtnXxV0XczjUIPHqL5gQv
+        sGn9K4Ts8LtI27sGgcln0epQG2xZE95+8VZY54BrEFh+WINzyVIN6Bsb1lLHnV908QHXICCyMFLR3N5h
+        CvRFn7kMjzFvPfY53IOA2Ix4/1mapS7M9mNpEoQgChNUZyhRUaejWEnFlrI18JnfOEYb2g4pZuRKYUNp
+        GgQP4TwXYV3cUNZBEOsgiHUQxDoIYh0EwfkHxGxVIwhV3iv2VI0gkITNWqVBaPk/JzeVBIHN10poahBW
+        JgBoShBWYgjEGhuE2U+CloYGYfbL4CKR5HCB1oUDx5q9Y+gpHnHGOZMd8Dl67Dc2/gLFj4htT28UKwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox4.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4gYTFBUL4fwpyAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAP4SURBVHhe
+        7Zo/zw1BFIffBIWISoUInUalQKEQjUgo1BpEdDq1RKdS+gK0RKMUoZH4BHQaFBIRIkL8+z3yTjKZnLnv
+        7s6cmbvX/SVPcu/d2Tlnz+7MnDl7Nypppzgnbot74ol4JT5vwmd+4xhtaMs5s9YecUU8El/Fn5FwDufS
+        B33NRrvETfFFWBc2BfqiT/peWm0T18R7YV1EDegbG9haKu0TL4XltAfYwuZS6Jh4JyxHPcEmtrvqovgm
+        LAdTPor74pI4LQ6L3Zvwmd84RhvaWn2kYBsfugjDllMpD8UpsV0MFW05h3OtPlOaB4FHb6s7/0KcFKWi
+        D/qybATwpdlwYPJZNOZ/iRuituiTvi2bgE/uEyPLz6LZ/pM4K3I6Km6Jp+K1YH0fI/rGhmUb8M11iWQN
+        tgwDjh0Rli4I0l3rvLHCxqIg4KOLyMJySQ6PpnXnD4rnwjonMEVnxE9h9YePLhkjqahlEKwxzyz+QVjt
+        Y6bqurD6A3ytKjYjudyeGToVF/9DpG25a48F88B5sVeU6JlIbQC+Vt1AsSOzDEG61PHYW3eeOeC4qKkT
+        IrUTuCyqiW2pZYREJVU65n+LO8Jrf/9AxPYC+FxFOJ7bz/Oox2K2T9tw8Z7Ch9Qm4HOVoFOdsQyQr6fp
+        bbrU8d27soMPub0DvheLEpXVOZuWWCQ58XEmvNpjPid8iW0H8L1Y1Omsztm5xWJmj48z27cSvsS2A/he
+        LIqVVudsX2OR3sbHCUgr4UtsO4DvxcqlsOzhY5Hbx8dZ51sJX2LbAXwvFmVrq3MKGbHSRKk0yRkjfIlt
+        B/C9WEMD0FOuARg6BHrKdQgMnQR7ynUSHLoM9pTrMjg0Eeop10RoTCrcQ+6p8JjNUA+5b4bQmO1wa7lv
+        h9GYgkhLNSuIjC2JtVKzkhgaWxT1VtOiKJpSFvdSl7I4mvpipKa6vRhBpa/GStX91Rj6r1+OBs3h9fgO
+        QYp86N83By37HyTuCo69Ea5B2OpJCJCvc0fYubF9ZQ9PIQP4zG8co00ut0/BtnXxV0XczjUIPHqL5gQv
+        sGn9K4Ts8LtI27sGgcln0epQG2xZE95+8VZY54BrEFh+WINzyVIN6Bsb1lLHnV908QHXICCyMFLR3N5h
+        CvRFn7kMjzFvPfY53IOA2Ix4/1mapS7M9mNpEoQgChNUZyhRUaejWEnFlrI18JnfOEYb2g4pZuRKYUNp
+        GgQP4TwXYV3cUNZBEOsgiHUQxDoIYh0EwfkHxGxVIwhV3iv2VI0gkITNWqVBaPk/JzeVBIHN10poahBW
+        JgBoShBWYgjEGhuE2U+CloYGYfbL4CKR5HCB1oUDx5q9Y+gpHnHGOZMd8Dl67Dc2/gLFj4htT28UKwAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAdQAAAHUASErKQUAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAHR0lEQVR4Xt2aa2wUVRTHJ+yj+2C322VbCZgUCJFEExPUEGMk8ZGQoKSJicYPJIYYFfRTVWI0flBD
+        wVpKBQRKiy20UMD6KiQ0UWKLtEWhLUXoblvSl6UFulBaodQWoeM9051ldubf7e7O3EL48Et2z73nzP2f
+        mb1n7r0riKLIlerHUmfWzvdl1M7zZdam+3LY533scxWjlXE9BH2uktqoD/VlPuSLYhoJNOrlxMOz5jIR
+        axiVjFGGmCDkSzHWUEx0Lb1AYyI0zJnjYHdtLbuD9WzA4yEBRjIuxWbXoGuhMSQCNMZDuSCY2KDeYgPs
+        Uw2YJ310Tbo2GlM8QGOs1CzwrWCD8asGN534aQxobLECjVNRN9+TXjfPdwwM6J5AY6ExobFOBTRGo3ZB
+        6rPsokH1IO4DgjQ2NOZoQONk1KSnvskuNKa68P3EGI0RjX0yoFGNNNHN8+WpLhYXDSueExtfWRYTDRkv
+        iLXzU2GcGMmLdYKERiUh8RWqC8RNX2ezeEUciYme7gCMEScVsSQBGpWwQLruvExP/XEoFtHRchrGSIA8
+        pEkJNMqEfvMocNx0/VoBxSLOtzTCGIkw1ZwAjURotjdswms/WATFqum/Myy2BhpgjAQZi1YdoJFqKnM0
+        tNS17ciFgtVc+HdAbDl1DMbQQXCy9wSNgeDxkuPP+gQKVtPxzyUxcLQCxtADaUJaNYbQ6y0MooezH6yG
+        gtW0XPlbbD5YDGPoBb02R3wJlTwu7/ZNq16DgpVcvDUkBoLd4tlvsmEMA/CrS2NEAkKrOuSom4aMF6Fo
+        Jd3DQSkBTZ9mwhiGwDQqNYc/SOt5jkvak0sXQ9FK2gZ6pQQ0rHoVxjCIPuV+QjgBtNEAOhvGiUfToWiZ
+        y7dvSOKJP59fAmMYBtOqTcDETg52MIjg6CAUT/SMDIQTULdoLvQ3DKY1IgGhPTwe21gRXLrUAcUT7UOs
+        /DHxLQzkazDj8h7jxN2f2MBEHQ2l118PxQfHb0rljxLQypKEfDmwRpkA2nlFnQylu+YXmIC+sYnyJyWg
+        pxX6cqBSSoC0b69v6zpmOg4dgAnoujFR/qQEtDVBXw6Mknaa/enQAnUwnPO7t8MEtA1cuJuAxhroywWm
+        nR7/TE0DJ1o2rdOIV5Y/ieoj0JcTmVT+6CgKNRpOM3vDUydAWf4I/497oS8XmHb6CdBZHe5gMH+9+4Ym
+        Ae1DFyMScK4gD/pygWmnnwAdVOIOBnP69RUR4pXlT+bMFx9BX05UUQLoZBY1Gk79smciEqAsfzKNq1dC
+        X060UgLoeBo1Gs4fTy6KSEDXjX5NAk4uXwp9OXFdyDaZxrNmzBCng/UWi3iFPfZyApTlTybb5YK+PNhk
+        Nd8Rcq3mMdTIi95rFyXxmvLHoHUA8uHFVpv1prDVbrmGGnnR3nZWSkDPyFVtAi53Qh9e5Dttl4XtjqQu
+        1MiL5rpqKQHq8ifR0wZ9eFHosgWEnU7bSdTIi/pD5VL5CwQjyx9xru0M9OFFscteJRS67D+jRl7UFOWL
+        vaODGvFEU2Mt9OFFqcdZIhQnO7JQIy+OZq8TO69ryx9x6rcj0IcX+73OD4X9ac6HNphwBx4cXpsptl7V
+        lj/i+Hd7oQ8Pciym8cqFXre0IcIqQRB14sHOp54Qf9+/B7In4yXowwM2910I7wh967aXoU4PMqUpjvxw
+        Ag54HItRpweVDSaTeCjVvTCcAOLrJMsw6vwgss1hHZR1hxOwy2U/jDrz5Kf33hGPleyCbTwpSXaWaRJQ
+        7nZ7N1rMt5EDD0g8LYxo9p/OJLAn/VZ16t0/YYcTQBS5HbuRk9HI4umVWC6B05WEMq9zs1JzRAIKBMGS
+        Z7WMIkejUIpXJmA6ksBWf8NRj8eJIo/jc+RsBGrx6gTwTgK7+++r9UZ8kdlitwyiAHoofXm5RjxKAHEk
+        6zMYQw9s6duPtGoMxD6v/ekci/kOCpQoG2w2sf7w91MmwN/dIubOng1jJMomq/n2D2nOx5FWjUGmJMWx
+        2ug1AkpChPiugJiblgZ9E+VLs0ks87lXIo0ENMoUuxy7UFA9qJMgi2/u8osbU33QJ1HWM/Z6nFH/LQqN
+        StiioR4F14MyCZL4TibeNwv21UNxsh3+NU4JNCqh0rjdkdSLLqAHOQnNHc1ijtcL++ihwGnrNOTP0kS1
+        IJgLXcZvnVEScjwe2JYo9NjTnY9FPAGNk1Gc7CiglRS68P0ATXhT/ebVQGM0Sr2Ot40ukUZApS7abD8Z
+        0DgVZbPsS7bZrVfRQO4F9JIzWZ2fCmiMldIU58ebkywjaFDTAb3bo9fbeIDGeKDJpjTZsYM9gv+hQfKA
+        lrS0qot1oosGNCZCpdfr3p1sP7jNYR3isctMky/t5NBmhnI9rxdo1MtPPtcj7KkoyHcm9X5lTvz0mbau
+        afeWNjDlPTyjgUYjKV+QknzA61xb4nGWFrvs1YUzbYEdzqT+LTbrCB1PE3RKSweVdFZHx1V0YkOHFrRv
+        j2Iahyj8DwOsRqXw1iADAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
