--- a/InfoBuraco/TelaFuncionarios.resx
+++ b/InfoBuraco/TelaFuncionarios.resx
@@ -120,47 +120,47 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="closeBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEbcAABG3AZpjUysAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADn0lEQVR4XuWbvW7UQBDHT6JDvAEFL0JBydmBLkXuEAVCiJIioqOAIhIIRTzEPQAVZZQiQoqO9j5S
-        8pHmyqsSKTkz//U6rH3/u/PH+uwwln4kjNezM+N4dz2z7kRRVCuj3Uf3ps/Cp+N++GbcDz5NeuFg0guO
-        hKkwt+B3kYUDtEFbXINrmU6fUGFVzp7v3J/2g9fjXvBNHLsQopJcQAd0QSfrqypUWIYfr57clTu4L0YP
-        hYXjhC+gU3SH++iL2VAGKizE7u6d8V7wctLrnmcMrpHuOfpE39SmAlBhXib9YEcMGi0buDVGsIHZlhcq
-        3IQ8lw+k8+OMMU1yDJuYrZugwnWc7T1+KB3OMga0gRlsYzavgwpXMe13X0hHl5mO28QlbGS2r4IKl5DB
-        RpQfZjprM4d5B0gqTIFRvhd8JZ20GticJwhU6CLKbtOdz3LIfHKhwgT7zDPFt4ZNYwIVAjvat3nAy8vl
-        utmBCu0838apriyzVeuEJQGQC9q0yPHFMfN1SWCXt0zB7Ycsm1P/sfN9k2v7uhllp8ZUAOK3Onrhf4N5
-        i3R8vvklfp/f5ittU3TP3XzCTQBsMoNckJ+fH95G89OT6NfHd/R8FX5/fh/Nh99NH+x8McJ9EgCTySGN
-        8wMDcSyurqI/Xw5omzJAF3TiQIBZm4IMRdW/ACDfJsLKaSzcpcRQX0FwncdPT39diyTHaAKApCNpVIqs
-        wVWC4FNXFvgsauMAyCoJ2VvasAw+DK/TeQCfRXXH5O1FUCV1TaniQN3OWy7gewcFCHLSC2Uc2ZLzBvje
-        QRWGnfRFEYe26TyA7xIAlKt4A1/kcWzbzgP4jgUQanW0gU/WOdiE8zHhAAsgFCrJSf8wR5tz3nCEAKAy
-        y07WgutwdH0dLQQcDTgPpggAytPsZG3AUTifHAhCA86DeWMBSO68ORoOQGOPgAmCDUSTj4D2QVD5NKh+
-        IaR+Kaz+ZUj967D0oTshgn/Up8R8JUWRsPRtcDYISLyydgVJJ0WBCKunxU9PYKf3u+UGAal31qYg6bQ4
-        QLGANCyEKYyIgZ7uUgr8dSHAtRVG1JfGgOriqEF7eRzo3iBhkcZ6t8gAbCiSC/RukgKqt8klqN4omSBK
-        9G6VNci0Ic+P3s3Shnh9oHS7vIMdExR+MOFgZwedn8wk2HWCzo+mXOyyWd9ncykwS5i3SIUfTrrE+QSN
-        n84SkG9D0lGeSz0fT68CuXcUIFCFictwbfp8Pur8Ba90ynjVH8eaAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAR
+        twAAEbcBmmNTKwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOfSURBVHhe5Zu9
+        btRAEMdPokO8AQUvQkHJ2YEuRe4QBUKIkiKio4AiEghFPMQ9ABVllCJCio72PlLykebKqxIpOTP/9Tqs
+        ff+788f67DCWfiSM17Mz43h3PbPuRFFUK6PdR/emz8Kn4374ZtwPPk164WDSC46EqTC34HeRhQO0QVtc
+        g2uZTp9QYVXOnu/cn/aD1+Ne8E0cuxCiklxAB3RBJ+urKlRYhh+vntyVO7gvRg+FheOEL6BTdIf76IvZ
+        UAYqLMTu7p3xXvBy0uueZwyuke45+kTf1KYCUGFeJv1gRwwaLRu4NUawgdmWFyrchDyXD6Tz44wxTXIM
+        m5itm6DCdZztPX4oHc4yBrSBGWxjNq+DClcx7XdfSEeXmY7bxCVsZLavggqXkMFGlB9mOmszh3kHSCpM
+        gVG+F3wlnbQa2JwnCFToIspu053Pcsh8cqHCBPvMM8W3hk1jAhUCO9q3ecDLy+W62YEK7TzfxqmuLLNV
+        64QlAZAL2rTI8cUx83VJYJe3TMHthyybU/+x832Ta/u6GWWnxlQA4rc6euF/g3mLdHy++SV+n9/mK21T
+        dM/dfMJNAGwyg1yQn58f3kbz05Po18d39HwVfn9+H82H300f7Hwxwn0SAJPJIY3zAwNxLK6uoj9fDmib
+        MkAXdOJAgFmbggxF1b8AIN8mwsppLNylxFBfQXCdx09Pf12LJMdoAoCkI2lUiqzBVYLgU1cW+Cxq4wDI
+        KgnZW9qwDD4Mr9N5AJ9Fdcfk7UVQJXVNqeJA3c5bLuB7BwUIctILZRzZkvMG+N5BFYad9EURh7bpPIDv
+        EgCUq3gDX+RxbNvOA/iOBRBqdbSBT9Y52ITzMeEACyAUKslJ/zBHm3PecIQAoDLLTtaC63B0fR0tBBwN
+        OA+mCADK0+xkbcBROJ8cCEIDzoN5YwFI7rw5Gg5AY4+ACYINRJOPgPZBUPk0qH4hpH4prP5lSP3rsPSh
+        OyGCf9SnxHwlRZGw9G1wNghIvLJ2BUknRYEIq6fFT09gp/e75QYBqXfWpiDptDhAsYA0LIQpjIiBnu5S
+        Cvx1IcC1FUbUl8aA6uKoQXt5HOjeIGGRxnq3yABsKJIL9G6SAqq3ySWo3iiZIEr0bpU1yLQhz4/ezdKG
+        eH2gdLu8gx0TFH4w4WBnB52fzCTYdYLOj6Zc7LJZ32dzKTBLmLdIhR9OusT5BI2fzhKQb0PSUZ5LPR9P
+        rwK5dxQgUIWJy3Bt+nw+6vwFr3TKeNUfx5oAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="addBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEbcAABG3AZpjUysAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADt0lEQVR4Xu2bT2sTQRjGA97Eb+DBL+JBk5xERYR4MJseitR6KFTIQTx5EIQofgAFTz1VbLMEi3io
-        pagoAT1F+gHMxWNFbRQ6vs9mUjfJs8l0k8lsGBd+TfrO7Lx/sjsz+85sTilllXPrpVPnw+ByfrO8WqgH
-        NWGtUK9sy+eesK+R75FMyoIa6uIcnMvanCZUOCn5xsLpfFhZLoTBljh0IKiUHKANtIU2ma5JocI0XGos
-        nczXg6oY3RQOY05MC7TZhA7oYjakgQqPQ2m9dEKMuiHGtWPG2qYNndDNbDoOVGhKYaN8UYxpDRg3S1qw
-        gdlmChWOI//i+pl8GOwQg5wAW2ATs3UcVDiK4sbCWVH4jRniEtgE25jNo6DCJIpheVGUdQaVZ4gObGS2
-        J0GFg+iO7jFRmElgq2kHSYVx0FBhs1xnijKN2GwSBCqMM0+//CCwnfkUhwp76HueNj4vjOsTqBCgR5UG
-        stzhmdIZNTpQoR7nMzfUpQW+JM0ThgQAEwvW0DwDn5ivQwI9vaWNTJuHn56oR5+f0jIrkGlz3z/RkDej
-        uf3K7j1R2T2W3tyldSzQGhwa+wKAJyxykhXuvK+Jyu6B76yODeCjqBwOAJ6xpcLMHmldBUBox/MJRwGQ
-        yCCZwU6wgsMA4Cqoitr+AEgBMjn0BBu4DIDQFLX/AoB8mwhtpLEScRyAw16OsRsAJDB5RWs4DoDMCyrL
-        orobAJ29pRVt4ToA8FlU56K8vQgmSV2nwnkAxGf4nsMCBCm0TgYCoOB7Tq/Y0Ao2yUIA4DuGPyxX0Qo2
-        yUIAhBoCgPU4VmiVjARgTQIQLUqyQqtkIwCVbVwBWKUlheO5unUrMj4Nz7481+6r6DurY0L59Sq1zZA9
-        BADL06xwJFde3lQ///zSLrg7vv/+oa69WqE2GrCfOgBQCuWuD/wI+DGYjQZEAUh9C+DyY5elCdO6BXAb
-        MtsMwS3wvxP0fRj0fCLk/VTY+4ch7x+HRb/fCRH88T4l5n1SFIjQ37Q48H5hxPulMYCFQ3KCFVwFAD6K
-        yiOf+wIwy+VxRwEYvTwOZrVB4vbb+6Kue1TfPaB1ps64DRI9ZrFFphhW1E77o9r5+kFdaCzSOtPEeIsM
-        8H6TFPB6m1wPrzdK9pBhw9+tsiAaGn3eLA3Q0DxdCbDVxHlAhUnoPsG/FybioEfN4hAJm0b19klQ4Tj0
-        PMHPl6bi6Gmzf6/NxdEdpJ8vTsbBM7YY5d+rswzk26JEazfb7MfL00kg944FCL0ClbHX51XuL2KApzvQ
-        Y4msAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAR
+        twAAEbcBmmNTKwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAO3SURBVHhe7ZtP
+        axNBGMYD3sRv4MEv4kGTnERFhHgwmx6K1HooVMhBPHkQhCh+AAVPPVVsswSLeKilqCgBPUX6AczFY0Vt
+        FDq+z2ZSN8mzyXSTyWwYF35N+s7svH+yOzP7zmxOKWWVc+ulU+fD4HJ+s7xaqAc1Ya1Qr2zL556wr5Hv
+        kUzKghrq4hycy9qcJlQ4KfnGwul8WFkuhMGWOHQgqJQcoA20hTaZrkmhwjRcaiydzNeDqhjdFA5jTkwL
+        tNmEDuhiNqSBCo9Dab10Qoy6Ica1Y8bapg2d0M1sOg5UaEpho3xRjGkNGDdLWrCB2WYKFY4j/+L6mXwY
+        7BCDnABbYBOzdRxUOIrixsJZUfiNGeIS2ATbmM2joMIkimF5UZR1BpVniA5sZLYnQYWD6I7uMVGYSWCr
+        aQdJhXHQUGGzXGeKMo3YbBIEKowzT7/8ILCd+RSHCnvoe542Pi+M6xOoEKBHlQay3OGZ0hk1OlChHucz
+        N9SlBb4kzROGBAATC9bQPAOfmK9DAj29pY1Mm4efnqhHn5/SMiuQaXPfP9GQN6O5/cruPVHZPZbe3KV1
+        LNAaHBr7AoAnLHKSFe68r4nK7oHvrI4N4KOoHA4AnrGlwsweaV0FQGjH8wlHAZDIIJnBTrCCwwDgKqiK
+        2v4ASAEyOfQEG7gMgNAUtf8CgHybCG2ksRJxHIDDXo6xGwAkMHlFazgOgMwLKsuiuhsAnb2lFW3hOgDw
+        WVTnory9CCZJXafCeQDEZ/iewwIEKbROBgKg4HtOr9jQCjbJQgDgO4Y/LFfRCjbJQgCEGgKA9ThWaJWM
+        BGBNAhAtSrJCq2QjAJVtXAFYpSWF47m6dSsyPg3PvjzX7qvoO6tjQvn1KrXNkD0EAMvTrHAkV17eVD//
+        /NIuuDu+//6hrr1aoTYasJ86AFAK5a4P/Aj4MZiNBkQBSH0L4PJjl6UJ07oFcBsy2wzBLfC/E/R9GPR8
+        IuT9VNj7hyHvH4dFv98JEfzxPiXmfVIUiNDftDjwfmHE+6UxgIVDcoIVXAUAPorKI5/7AjDL5XFHARi9
+        PA5mtUHi9tv7oq57VN89oHWmzrgNEj1msUWmGFbUTvuj2vn6QV1oLNI608R4iwzwfpMU8HqbXA+vN0r2
+        kGHD362yIBoafd4sDdDQPF0JsNXEeUCFSeg+wb8XJuKgR83iEAmbRvX2SVDhOPQ8wc+XpuLoabN/r83F
+        0R2kny9OxsEzthjl36uzDOTbokRrN9vsx8vTSSD3jgUIvQKVsdfnVe4vYoCnO9BjiawAAAAASUVORK5C
+        YII=
 </value>
   </data>
 </root>
